feat: update consulta historico with graphql